layout fixes, wip buggy dropdown in collapse

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/History/CategoryHistory.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/History/CategoryHistory.less
@@ -88,6 +88,7 @@
 
     .btn {
         margin-left: auto;
+        margin-right: 10px;
     }
 
     #Typ {
@@ -186,6 +187,10 @@
 
                 .chevron-container {
                     width: 27px;
+                    text-align: center;
+                    align-items: center;
+                    justify-content: center;
+                    display: flex;
                 }
             }
 
